[project]
name = "sbump"
version = "0.1.0"
description = "SimpleBump, bump a static project.version in pyproject.toml, no config, no hassle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "semver>=3.0.2",
]

[project.scripts]
sbump = "sbump:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
